<resources>
    <string name="app_name">Komyla</string>
    <string name="app_id">377638892395189</string>
    <string name="debugOrProd">PROD</string>
    <string name="action_params">Paramètres</string>
    <string name="action_signout">Déconnexion</string>
    <string name="action_flash_on">Allumer Flash</string>
    <string name="action_flash_off">Eteindre Flash</string>
    <string name="action_cant_scan">Scan impossible ?</string>
    <string name="action_scan">Scanner le QR Code</string>
    <string name="action_add_item">Ajouter un moyen de paiement</string>
    <string name="firstname">Prénom</string>
    <string name="name">Nom</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="labelenterPhoneNumberOrMail">Entrez un numéro de téléphone portable ou une adresse email :</string>
    <string name="labelSelectContact">Séléctionnez un contact</string>
    <string name="labelPayementMethod">Votre moyen de paiement :</string>
    <string name="labelDeliveryAddress">Votre adresse de livraison :</string>
    <string name="labelnext">Suivant</string>
    <string name="labelCardName">Numéro de carte</string>
    <string name="labelExpirationDate">Date d\'expiration</string>
    <string name="labelCryptogram">Cryptogramme</string>
    <string name="labelCardOwnerName">Nom du détenteur</string>
    <string name="labelAccountDisplayName">Nom d\'affichage</string>
    <string name="labelyourname">Votre nom :</string>
    <string name="labelyourcomplement">Complément :</string>
    <string name="labelyouradress">Adresse :</string>
    <string name="labelyourcp">Code Postal :</string>
    <string name="labelyourcity">Ville :</string>
    <string name="labelyourcountry">Pays :</string>
    <string name="labelyouremail">Email :</string>
    <string name="labelyourphonenumber">Vos numéros de téléphone :</string>
    <string name="label_phone_or_email"> :\nEmail ou un numéro de téléphone ?</string>
    <string name="label_phone"> :\nChoisir un numéro de téléphone</string>
    <string name="label_email"> :\nChoisir un email</string>
    <string name="labelyourphonesecurity">Pour la sécurité de votre compte Komyla, merci de supprimer les numéros de téléphone obsolètes.</string>
    <string name="label_recap">Récapitulatif</string>
    <string name="label_paiementok">Commande terminée !</string>
    <string name="label_back_to_menu">Retour au menu principal</string>
    <string name="label_receive_money">va recevoir</string>
    <string name="label_no_account_sms">n\'a pas encore de compte Komyla. Il va recevoir un SMS pour l\'inviter à créer un compte Komyla pour récupérer son argent.</string>
    <string name="label_no_account_email">n\'a pas encore de compte Komyla. Il va recevoir un email pour l\'inviter à créer un compte Komyla pour récupérer son argent.</string>
    <string name="label_proof_address_hint">Pour recevoir votre argent, vous devez nous envoyer un justificatif de domicile récent.</string>
    <string name="label_id_card_hint">Pour recevoir votre argent, vous devez nous envoyer votre carte d\'identité.</string>
    <string name="labelTakePicture">Prendre une photo</string>
    <string name="labelSelectPicture">Séléctionner une photo</string>
    <string name="labelSendRecto">Envoyer le recto de la carte d\'identité</string>
    <string name="labelSendVerso">Envoyer le verso de la carte d\'identité</string>
    <string name="labelDocumentOK">Document reçu.</string>
    <string name="labelMessageProofAddress">Nous avons reçu votre justificatif de domicile. Nous allons l\'examiner sous 48 heures ouvrés.</string>
    <string name="labelMessageIDCardRecto">Nous avons reçu le recto de votre carte d\'identité. Nous allons l\'examiner sous 48 heures ouvrés.</string>
    <string name="labelMessageIDCardVerso">Nous avons reçu le verso de votre carte d\'identité. Nous allons l\'examiner sous 48 heures ouvrés.</string>
    <string name="label_proof_not_receive">Nous n\'avons pas encore reçu votre justificatif de domicile.</string>
    <string name="label_proof_wait">Nous avons reçu votre justificatif de domicile. Nous allons l\'examiner sous 48 heures ouvrés. Si vous nous soumettez un nouveau justificatif, l\'ancien sera supprimé.</string>
    <string name="label_proof_ok">Nous avons reçu votre justificatif de domicile. Votre situation est régulière.</string>
    <string name="label_id_card_recto_not_receive">Nous n\'avons pas encore reçu le recto de votre carte d\'identité.</string>
    <string name="label_id_card_recto_wait">Nous avons reçu le recto de votre carte d\'identité. Nous allons l\'examiner sous 48 heures ouvrés. Si vous nous soumettez un nouveau recto de carte d\'identité, l\'ancien sera supprimé.</string>
    <string name="label_id_card_recto_ok">Nous avons reçu le recto de votre carte d\'identité.</string>
    <string name="label_id_card_verso_not_receive">Nous n\'avons pas encore reçu le verso de votre carte d\'identité.</string>
    <string name="label_id_card_verso_wait">Nous avons reçu le verso de votre carte d\'identité. Nous allons l\'examiner sous 48 heures ouvrés. Si vous nous soumettez un nouveau verso de carte d\'identité, l\'ancien sera supprimé.</string>
    <string name="label_id_card_verso_ok">Nous avons reçu le verso de votre carte d\'identité.</string>
    <string name="label_id_card_ok">Nous avons reçu votre carte d\'identité. Votre situation est régulière.</string>
    <string name="label_payer">Payer</string>
    <string name="error_connexion_csrf">Erreur : Vous n\'êtes plus connecté.</string>
    <string name="error_file_400">Erreur : Le serveur n\'a pas reçu le document. Veuillez réessayer ultérieurement.</string>
    <string name="error_file_500">Erreur du serveur. Veuillez réessayer ultérieurement ou contacter le support.</string>
    <string name="error_file_upload">0 file(s) uploaded successfully!</string>
    <string name="buttonSaveCardData">Enregistrer</string>
    <string name="buttonDeleteCardData">Supprimer</string>
    <string name="url_api_create">http://private-72ff4-lizz.apiary-mock.com/user/create</string>
    <string name="url_api_login">http://private-anon-ca973bc2f-lizz.apiary-mock.com/user/</string>
    <string name="url_api_final">http://163.5.84.225:8000/</string>
    <string name="url_api_final_v1">http://163.5.84.225:8000/api/v1/</string>
    <string name="urllizzcode">http://www.komyla.com/scan/</string>
    <string name="url_api_komyla_no_suffix">http://api.komyla.com:8000/</string>
    <string name="url_api_suffix">api/v1/</string>
    <string name="url_api_csrfToken">csrfToken</string>
    <string name="url_api_createUser">user/create</string>
    <string name="url_api_createSession">session/create</string>
    <string name="url_api_get_paymentMethods">wallet/getCards</string>
    <string name="url_api_user_update_password">user/updatePassword</string>
    <string name="url_api_user_transaction">transaction/secure</string>
    <string name="url_api_user_pay">checkout/dopayement</string>
    <string name="url_api_user_get_transaction_from_cashregister">checkout/getTicket</string>
    <string name="url_api_user_session_ssofb">session/ssofacebook</string>
    <string name="url_api_user_session_ssogoogle">session/ssogoogle</string>
    <string name="url_api_add_creditCard">wallet/createWallet</string>
    <string name="url_api_update_creditCard">paymentcard/update/</string>
    <string name="url_api_delete_creditCard">wallet/disableCreditCard</string>
    <string name="url_api_upload">file/upload</string>
    <string name="dialog_title_no_internet">Erreur de connectivité</string>
    <string name="dialog_no_network">Hors de portée GSM</string>
    <string name="dialog_no_internet">Votre connexion internet ne semble pas fonctionner</string>
    <string name="dialog_no_internet_label_sms">Votre connexion internet ne semble pas fonctionner. Souhaite-vous régler par SMS sécurisé ou annuler la transaction ?</string>
    <string name="dialog_no_internet_label">Vous allez régler ce commerçant par SMS Sécurisé.</string>
    <string name="dialog_no_network_pay">Votre téléphone est hors de portée des réseaux GSM et internet. Le réglement via Komyla est impossible actuellement, veuillez réessayer ultérieurement.</string>
    <string name="dialog_save">Enregistrer</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_bysms">Régler par SMS</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_notnow">Pas maintenant</string>
    <string name="dialog_never">Jamais</string>
    <string name="dialog_title_confirm">Confirmation</string>
    <string name="dialog_title_info">Information</string>
    <string name="dialog_confirm_hint_pin">Entrez le code PIN pour enregistrer ce paramètre.</string>
    <string name="dialog_confirm_hint_newpin">Entrez le NOUVEAU code PIN pour enregistrer ce paramètre.</string>
    <string name="dialog_confirm_mdp_parental">Entrez à nouveau le mot de passe parental pour enregistrer ce paramètre</string>
    <string name="dialog_confirm_old_mdp_parental">Entrez votre ANCIEN mot de passe parental pour enregistrer ce paramètre</string>
    <string name="dialog_confirm_mdp">Confirmer votre mot de passe</string>
    <string name="dialog_confirm_hint_pin_change">Entrez votre ANCIEN code PIN Komyla pour enregistrer ce paramètre.</string>
    <string name="dialog_confirm_hint_pwd_change">Entrez votre ANCIEN mot de passe Komyla pour enregistrer ce paramètre.</string>
    <string name="dialog_confirm_pin">Entrez votre code PIN Komyla pour confirmer la transaction :</string>
    <string name="dialog_info_flash_unavialable">Impossible de démarrer le flash.</string>
    <string name="dialog_scan_qr_code">Scan a Komyla QRCode</string>
    <string name="dialog_new_phone_number">Nouveau numéro de téléphone</string>
    <string name="dialog_new_phone_number_txt1">Nous avons détecté un nouveau numéro de téléphone (</string>
    <string name="dialog_new_phone_number_txt2">). Souhaitez-vous que nous mettions à jour votre profil ?</string>
    <string name="dialog_numberAdd">Numéro ajouté</string>
    <string name="dialog_numberAddTxt">Le numéro de votre carte SIM actuelle a été ajouté à votre compte.</string>
    <string name="dialog_download">Téléchargement en cours...</string>
    <string name="dialog_download_rsa_key">Veuillez patienter pendant le téléchargement de votre clé sécurisée Komyla.</string>
    <string name="hint_code_pin">Entrez votre nouveau code PIN Komyla</string>
    <string name="hint_confirm_codepin">Vous pouvez entrer votre code PIN Komyla</string>
    <string name="hint_code_pin_edittext">Code PIN Komyla</string>
    <string name="hint_confirm_code_pin_edittext">Confirmation de votre Code PIN Komyla</string>
    <string name="hint_scanner">Si la caméra de votre smartphone est endommagé, vous pouvez désactivé le Scanner de QRCode et utiliser uniquement la saisie de l\'identifiant unique Komyla. Voulez-vous activer le scanner ?</string>
    <string name="hint_iban">Entrez le numéro de compte sur lequel vous souhaitez recevoir votre argent.</string>
    <string name="hint_iban2">IBAN</string>
    <string name="hint_iban_edittext">FR0000000000000000000000000</string>
    <string name="hint_phone_email">Numéro de téléphone ou adresse email</string>
    <string name="hint_payement_pap">Pour envoyer de l\'argent à un particulier, vous devez entrer son numéro de téléphone portable ou son adresse email.</string>
    <string name="hint_somme">Somme en euro €</string>
    <string name="email_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-0123456789@.!#$%\'*+/=?^_`{|}~</string>
    <string name="alphaNumeric_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="address_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789ÄÃÅĀÀÂÆÁĖĘĒÊÉÈËŸŪÜÚÙÛĪÍĮÌÏÎŌÕÓÒÖŒÔČÇĆ\'-()":äãåā àâæáėęēêéèëÿūüúùûīíįìïîōõóòöœ</string>
</resources>