<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="roblin_m.cardlistsample.AddEditPaymentMethodActivity"

        android:id="@+id/rootview"
        >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_iban" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_iban2" />

        <EditText
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:ems="10"
            android:digits="@string/alphaNumeric_digits"
            android:id="@+id/rib"
            android:gravity="center_horizontal"
            android:hint="@string/hint_iban_edittext"/>

    </LinearLayout>

</ScrollView>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="horizontal"
android:gravity="bottom">

<Button
    android:id="@+id/cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/dialog_cancel">
</Button>

<Button
    android:id="@+id/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1" android:text="@string/dialog_save">
</Button>
</LinearLayout>
    </FrameLayout>