<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent" android:layout_height="fill_parent">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/rootview"
        >

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal"
                android:text="@string/hint_code_pin" />

            <EditText
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/codepin"
                android:inputType="textPassword"
                android:gravity="center_horizontal"
                android:hint="@string/hint_code_pin_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center_horizontal"
                android:text="@string/hint_confirm_codepin" />

            <EditText
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/confirmcodepin"
                android:gravity="center_horizontal"
                android:hint="@string/hint_confirm_code_pin_edittext"
                android:inputType="textPassword" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel">
        </Button>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/dialog_save">
        </Button>
    </LinearLayout>
</FrameLayout>