<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="eip.com.lizz.Setting.SettingsProofAddress">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_proof_address_hint"
        android:id="@+id/label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/statut"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTakePicture"
        android:id="@+id/take"
        android:layout_below="@+id/statut"
        android:layout_alignLeft="@+id/select"
        android:layout_alignStart="@+id/select"
        android:layout_alignRight="@+id/select"
        android:layout_alignEnd="@+id/select" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSelectPicture"
        android:id="@+id/select"
        android:layout_below="@+id/take"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
